# TheEndPhisingProject

./: .gitignore  README.md
phising_cleaner/: Cargo.toml
phising_cleaner/samples/: sample_email.eml
phising_cleaner/src/: main.rs
phising_cleaner/src/analysis/: heuristics.rs  mod.rs
phising_cleaner/src/parser/: body.rs  headers.rs  mod.rs
