[package]
name = "phising_cleaner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "phising_cleaner"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
regex = "1.11.1"
email-parser = "0.5.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
url = "2.5.4"



[dependencies.web-sys]
version = "0.3.77"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"